[tool.poetry]
name = "inputtimeout"
version = "0.1.0"
description = "inputtimeout using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.70.1,<1.0.0" }


[tool.poetry.scripts]
inputtimeout = "inputtimeout.main:run"
run_crew = "inputtimeout.main:run"
train = "inputtimeout.main:train"
replay = "inputtimeout.main:replay"
test = "inputtimeout.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
